--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "portfolio",
-  "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -9,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
