--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass": "^1.84.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
