--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
   "name": "portfolio",
-  "private": false,
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "packageManager": "pnpm@10.5.2",
   "dependencies": {
-    "aos": "^2.3.4",
-    "next": "15.1.6",
-    "react": "^19.0.0",
-    "react-countup": "^6.5.3",
-    "react-dom": "^19.0.0",
-    "sass": "^1.84.0"
+    "daisyui": "^5.0.9",
+    "next": "^15.2.4",
+    "react": "^19.1.0",
+    "scss": "^0.2.4",
+    "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
-    "@types/aos": "^3.0.7",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/react": "^19.0.12"
   }
 }
